[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Menu/Menu.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://Fontes/Minecraftia-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/Outros/Frame.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="Menu" type="Node2D"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control"]
position = Vector2( 320, 180 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 4

[node name="ButtonPlay" type="Button" parent="Control"]
show_behind_parent = true
margin_left = 261.0
margin_top = 182.0
margin_right = 381.0
margin_bottom = 221.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCredit" type="Button" parent="Control"]
show_behind_parent = true
margin_left = 261.0
margin_top = 238.0
margin_right = 381.0
margin_bottom = 277.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonQuit" type="Button" parent="Control"]
show_behind_parent = true
margin_left = 261.0
margin_top = 294.0
margin_right = 381.0
margin_bottom = 333.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credit" type="Control" parent="."]
visible = false
margin_right = 642.0
margin_bottom = 358.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame" type="Sprite" parent="Credit"]
position = Vector2( 320, 181 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="Credit"]
margin_left = 230.0
margin_top = 52.0
margin_right = 410.0
margin_bottom = 299.0
custom_fonts/font = SubResource( 1 )
text = "Dayllan Alho
Elias Biondo
Gabriel Rocha
Jackson Aguiar
Matheus Fidelis
Renato Machado
Theo Tosto

1º Turma - Ateliê 4
CC BY 4.0 2022"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Credit"]
show_behind_parent = true
margin_left = 451.0
margin_top = 62.0
margin_right = 474.0
margin_bottom = 85.0

[connection signal="mouse_entered" from="Control/ButtonPlay" to="." method="_on_ButtonPlay_mouse_entered"]
[connection signal="mouse_exited" from="Control/ButtonPlay" to="." method="_on_ButtonPlay_mouse_exited"]
[connection signal="pressed" from="Control/ButtonPlay" to="." method="_on_ButtonPlay_pressed"]
[connection signal="mouse_entered" from="Control/ButtonCredit" to="." method="_on_ButtonCredit_mouse_entered"]
[connection signal="mouse_exited" from="Control/ButtonCredit" to="." method="_on_ButtonCredit_mouse_exited"]
[connection signal="pressed" from="Control/ButtonCredit" to="." method="_on_ButtonCredit_pressed"]
[connection signal="mouse_entered" from="Control/ButtonQuit" to="." method="_on_ButtonQuit_mouse_entered"]
[connection signal="mouse_exited" from="Control/ButtonQuit" to="." method="_on_ButtonQuit_mouse_exited"]
[connection signal="pressed" from="Control/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
[connection signal="pressed" from="Credit/Button" to="." method="_on_Button_pressed"]
